tests/NormalTests/paczka1/fuzzy1/76803088.err
Error in line 19: GEdgW A645 9,4
Error in line 28: A645 S531 26,9
Error in line 29: A645 S298 25,1
Error in line 37: MSLu S298 90,8
